fix: scrollbar contact list

--- a/src/app/contact-section/contact-list/contact-list.scss
+++ b/src/app/contact-section/contact-list/contact-list.scss
@@ -2,18 +2,27 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background-color: #ffffff;
   position: relative;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   scroll-behavior: auto;
   padding-bottom: 8px;
+  .button-container {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 16px;
+    padding-left: 20px;
+  }
   .contact-list-div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding: 16px;
+    padding: 0px 20px 0px 20px;
+    flex-grow: 1;
+    overflow-y: scroll;
   }
   .addButton {
     background-color: #2a3647;
@@ -27,8 +36,8 @@
     color: #ffffff;
     max-width: 352px;
     width: 100%;
-    height: 40px;
-    border-radius: 15px;
+    height: 56px;
+    border-radius: 10px;
     gap: 8px;
     img {
       width: 24px;
@@ -49,9 +58,10 @@
     display: flex;
     justify-content: flex-start;
     width: 100%;
+    max-width: 352px;
     gap: 35px;
     padding: 8px;
-    padding-left: 28px;
+    padding-left: 24px;
     margin-top: 8px;
     .avatarLetterBox {
       width: 42px;
@@ -96,10 +106,29 @@
   }
 }
 
+@media (max-width: 1000px) {
+  .contact-list-section {
+    .button-container {
+      justify-content: center;
+      padding-left: 0;
+    }
+    .addButton {
+      margin-left: 0;
+      width: 100%;
+    }
+    .contact-list-div {
+      overflow-y: visible;
+    }
+  }
+}
+
 @media (max-width: 768px) {
   .contact-list-section {
     .addButton {
       display: none;
+    }
+    .contact-list-div {
+      padding-bottom: 100px;
     }
     .addButtonMobil {
       display: flex;
